# murmuration

./: .gitignore  .pre-commit-config.yaml  GAME_FEATURES.md  GAME_RULES.md  GENETICS_SYSTEM.md  INPUT_SYSTEM_DOCUMENTATION.md  Makefile  QUICKSTART.md  README.md  ROADMAP2.md  balance_analysis.md  claude.md  demo.html  demo_evolved.html  demo_game.html  demo_game_final.html  demo_genetic.html  demo_interactive.html  mock_torch.py  murmuration_full_game_tech_design_doc_v_0.md  package-lock.json  package.json  pyproject.toml  roadmap3.md  test_connection.py  test_integration_genetic_ui.py  test_load_level.py  test_phase2_validation.py  test_unified_simulation.py  trajectorynew.md  validate_ml.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: accessibility-audit.yml  ci-cd.yml  ci.yml  performance-monitoring.yml
client/: .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  README.md  index.html  overhaul.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
client/docs/: performance-benchmarks.md  qa-checklist.md  testing-guide.md
client/src/: AudioManager.ts  BirdAnimationSystem.ts  GameScene.ts  MenuScene.ts  UIScene.ts  UI_SYSTEM_README.md  WebSocketClient.ts  main.ts
client_backup/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
client_backup/src/: App.tsx  (+3 more)
configs/: acceptance.yaml  acceptance_ci_fast.yaml
docs/: PHASER_RENDERING_SYSTEM.md  VISUAL_SHOWCASE.md
levels/: W1-1.json  levels.json  schema.json
sim/: __init__.py  migration_system.py  scoring.py  server.py  simulation.py  simulation_evolved.py  simulation_game.py  simulation_genetic.py  simulation_path.py  simulation_unified.py
tests/: __init__.py  acceptance_runner.py  test_beacons.py  test_cli.py  test_hazards.py  test_ml.py  test_physics.py  test_star_scoring.py
(+47 files in other folders)
